kube/labs-api.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: app
 labels:
   app.kubernetes.io/name: app
   app.kubernetes.io/instance: app
 
---
 
apiVersion: apps/v1
kind: Deployment
metadata:
 name: labs-deployment
 labels:
   app: labs-api
 namespace: app
spec:
 replicas: 2
 selector:
   matchLabels:
     app: labs-api
 template:
   metadata:
     annotations:
       prometheus.io/scrape: "true"
       prometheus.io/path: /actuator/prometheus
       prometheus.io/port: "8080"
     labels:
       app: labs-api
   spec:
     containers:
     - name: labs-api
       image: afonsoaoc/labs-api:v1.21
       ports:
         - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: labs-api-service
 namespace: app
spec:
 selector:
   app: labs-api
 ports:
 - port: 8080
