kube/ingress-labs-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labs-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /labs-api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: labs-api-service
              port: 
                number: 8080
