kube/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /prometheus(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: prometheus-server
              port: 
                number: 80
